query conversations by id and address
