# docs/static/openapi.yml
@@ -134,6 +134,161 @@ paths:
           type: string
       tags:
         - Query
+  /chatty/chat/group_conversation/address/{address}:
+    get:
+      summary: Queries a list of GroupConversationsByAddress items.
+      operationId: ChattyChatGroupConversationsByAddress
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              group_conversations:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: string
+                      format: int64
+                    admin:
+                      type: string
+                    name:
+                      type: string
+                    participants:
+                      type: array
+                      items:
+                        type: string
+                    messages:
+                      type: array
+                      items:
+                        type: object
+                        properties:
+                          sender:
+                            type: string
+                          message:
+                            type: string
+                          encrypted:
+                            type: boolean
+                          created_at:
+                            type: string
+                            format: int64
+                    created_at:
+                      type: string
+                      format: int64
+                    last_message_at:
+                      type: string
+                      format: int64
+                    pubKey:
+                      type: object
+                      properties:
+                        address:
+                          type: string
+                        key:
+                          type: string
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: address
+          in: path
+          required: true
+          type: string
+      tags:
+        - Query
+  /chatty/chat/group_conversation/id/{id}:
+    get:
+      summary: Queries a list of GroupConversationById items.
+      operationId: ChattyChatGroupConversationById
+      responses:
+        '200':
+          description: A successful response.
+          schema:
+            type: object
+            properties:
+              group_conversation:
+                type: object
+                properties:
+                  id:
+                    type: string
+                    format: int64
+                  admin:
+                    type: string
+                  name:
+                    type: string
+                  participants:
+                    type: array
+                    items:
+                      type: string
+                  messages:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        sender:
+                          type: string
+                        message:
+                          type: string
+                        encrypted:
+                          type: boolean
+                        created_at:
+                          type: string
+                          format: int64
+                  created_at:
+                    type: string
+                    format: int64
+                  last_message_at:
+                    type: string
+                    format: int64
+                  pubKey:
+                    type: object
+                    properties:
+                      address:
+                        type: string
+                      key:
+                        type: string
+        default:
+          description: An unexpected error response.
+          schema:
+            type: object
+            properties:
+              code:
+                type: integer
+                format: int32
+              message:
+                type: string
+              details:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    '@type':
+                      type: string
+                  additionalProperties: {}
+      parameters:
+        - name: id
+          in: path
+          required: true
+          type: string
+          format: int64
+      tags:
+        - Query
   /chatty/chat/params:
     get:
       summary: Parameters queries the parameters of the module.
@@ -785,6 +940,47 @@ definitions:
       last_message_at:
         type: string
         format: int64
+  chatty.chat.GroupConversation:
+    type: object
+    properties:
+      id:
+        type: string
+        format: int64
+      admin:
+        type: string
+      name:
+        type: string
+      participants:
+        type: array
+        items:
+          type: string
+      messages:
+        type: array
+        items:
+          type: object
+          properties:
+            sender:
+              type: string
+            message:
+              type: string
+            encrypted:
+              type: boolean
+            created_at:
+              type: string
+              format: int64
+      created_at:
+        type: string
+        format: int64
+      last_message_at:
+        type: string
+        format: int64
+      pubKey:
+        type: object
+        properties:
+          address:
+            type: string
+          key:
+            type: string
   chatty.chat.Params:
     type: object
     properties:
@@ -861,6 +1057,96 @@ definitions:
             last_message_at:
               type: string
               format: int64
+  chatty.chat.QueryGroupConversationByIdResponse:
+    type: object
+    properties:
+      group_conversation:
+        type: object
+        properties:
+          id:
+            type: string
+            format: int64
+          admin:
+            type: string
+          name:
+            type: string
+          participants:
+            type: array
+            items:
+              type: string
+          messages:
+            type: array
+            items:
+              type: object
+              properties:
+                sender:
+                  type: string
+                message:
+                  type: string
+                encrypted:
+                  type: boolean
+                created_at:
+                  type: string
+                  format: int64
+          created_at:
+            type: string
+            format: int64
+          last_message_at:
+            type: string
+            format: int64
+          pubKey:
+            type: object
+            properties:
+              address:
+                type: string
+              key:
+                type: string
+  chatty.chat.QueryGroupConversationsByAddressResponse:
+    type: object
+    properties:
+      group_conversations:
+        type: array
+        items:
+          type: object
+          properties:
+            id:
+              type: string
+              format: int64
+            admin:
+              type: string
+            name:
+              type: string
+            participants:
+              type: array
+              items:
+                type: string
+            messages:
+              type: array
+              items:
+                type: object
+                properties:
+                  sender:
+                    type: string
+                  message:
+                    type: string
+                  encrypted:
+                    type: boolean
+                  created_at:
+                    type: string
+                    format: int64
+            created_at:
+              type: string
+              format: int64
+            last_message_at:
+              type: string
+              format: int64
+            pubKey:
+              type: object
+              properties:
+                address:
+                  type: string
+                key:
+                  type: string
   chatty.chat.QueryParamsResponse:
     type: object
     properties:
